@@ -1,3 +1,8 @@
+== In Git
+
+=== New Features
+* Tag limits for negative tags (Aslak Hellesøy)
+
 == 2.0.2 (2010-06-16)
 
 === New Features
